fixed margin in welcome to make book now visible on mobile

--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ a:hover {
   justify-content: center;
   align-items: center;
   font-size: 5rem;
-  margin: 10% 0;
+  margin: 0;
 }
 
 .fa-facebook {
